--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-gesture-handler": "^1.4.1",
-    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.2",
-    "react-router-native": "^5.1.2"
+    "react-redux": "^7.1.3",
+    "react-router-native": "^5.1.2",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
